[package]
name = "httpcat"
version = "0.1.0"
edition = "2021"
description = "HTTP client that shows cat images based on status codes"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
reqwest = { version = "0.12", features = ["blocking"] }
tokio = { version = "1.0", features = ["full"] }
image = "0.24"
viuer = "0.7"
anyhow = "1.0"
colored = "2.1"
